--- a/README
+++ b/README
@@ -2,3 +2,33 @@ Simple Maven Projects for testing
 ---------------------
 
 This repository contains two small Maven projects intended as examples of how a Maven projects can be setup. They were created to be used in a presentation about Maven.
+
+```console
+      <plugin>
+        <groupId>io.snyk</groupId>
+        <artifactId>snyk-maven-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <id>snyk-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>snyk-monitor</id>
+            <phase>install</phase>
+            <goals>
+              <goal>monitor</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <apiToken>${SNYK_DEV_API_TOKEN}</apiToken>
+          <endpoint>https://dev.snyk.io</endpoint>
+          <!--<failOnSeverity>medium</failOnSeverity>-->
+          <showDependencyList>true</showDependencyList>
+        </configuration>
+      </plugin>
+```
